--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "razorpay": "^2.8.6",
     "slugify": "^1.6.5",
     "sweetalert2": "^11.4.8",
+    "toastify-js": "^1.12.0",
     "twilio": "^4.8.0",
     "voucher-code-generator": "^1.3.0"
   }
